<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.teapink.ocr_reader.activities.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/status_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/ocr_header" />

        <TextView
            android:id="@+id/text_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:minHeight="@dimen/text_value_min_height"
            android:layout_margin="@dimen/small_margin"
            android:background="@drawable/dashed_border" />

        <CheckBox
            android:id="@+id/use_flash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_flash"
            android:layout_gravity="center"
            android:checked="false" />

        <Button
            android:id="@+id/read_text_button"
            android:layout_marginTop="@dimen/button_margin_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/read_text"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/copy_text_button"
            android:layout_marginTop="@dimen/button_margin_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copy_text"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/mail_text_button"
            android:layout_marginTop="@dimen/button_margin_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_email_text"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"/>

    </LinearLayout>
</ScrollView>